# code-review-c

./: .gitignore  .travis.yml  README.md  configure.ac
functional_tests/: code-review-c-test.sh
src/: Makefile.am  code-review-c.c  log.c  log.h  test.c
