bin_PROGRAMS = code-review-c-c
check_PROGRAMS = code-review-c-test
TESTS = code-review-c-test
code-review-c_c_SOURCES = code-review-c.c fasta.c log.c
code-review-c_c_LDADD = -lm -lz
code-review-c_c_CFLAGS = -Wall -m64 -std=gnu99 -pedantic
code-review-c_test_SOURCES = test.c fasta.c log.c
code-review-c_test_LDADD = -lm -lz
code-review-c_test_CFLAGS = -Wall -m64 -std=gnu99 -pedantic
